# controller-topology-project

./: .gitignore  Readme-Addons.md  Readme-Keyboard.md  Readme.md  categories.po  png-crush.sh  pyproject.toml
.github/workflows/: increment-version.yml  sync-addon-metadata-translations.yml
addons/game.controller.3do/: addon.xml
addons/game.controller.3do.gamegun/: addon.xml
addons/game.controller.amiga.cd32/: addon.xml
addons/game.controller.amiga.pro.joystick/: addon.xml
addons/game.controller.amstrad.joystick/: addon.xml
addons/game.controller.amstrad.keyboard/: addon.xml
addons/game.controller.arcade.neogeo/: addon.xml
addons/game.controller.atari.2600/: addon.xml
addons/game.controller.atari.5200/: addon.xml
addons/game.controller.atari.7800.gamepad/: addon.xml
addons/game.controller.atari.7800.proline/: addon.xml
addons/game.controller.atari.800/: addon.xml
addons/game.controller.atari.lynx/: addon.xml
addons/game.controller.atari.xges.keyboard/: addon.xml
addons/game.controller.atari.xges.xg1/: addon.xml
addons/game.controller.cec.adapter/: addon.xml
addons/game.controller.colecovision/: addon.xml
addons/game.controller.default/: addon.xml  layout.xml
addons/game.controller.dreamcast/: addon.xml  (+1 more)
controllertopologyproject/: gitaccess.py
kodi_game_scripting/: __main__.py  config.py  credentials.py  git_access.py  libretro_ctypes.py  process_game_addons.py  template_processor.py  utils.py  versions.py
lib/: config.py  gameaddons.py
scripts/: Readme.md  addon.py  costmap.py  generate_costmap.py  geometry.py  pathfinder.py
(+7780 files in other folders)
